--- a/ExamPrep.html
+++ b/ExamPrep.html
@@ -10,7 +10,7 @@
 
     <!-- Data Sets -->
     <script type="text/javascript" src="/JS_util/data_sets/Computetianal_Models.js"></script>
-    <script type="text/javascript" src="/JS_util/data_sets/Statistical_Conclusion.js"></script>
+    <script type="text/javascript" src="/JS_util/data_sets/Algoritms.js"></script>
 
 
 </head>
@@ -19,16 +19,10 @@
     <input type="button" id="btngetQuestion" onclick="getQuestion()" style="color:blue;font-size:30px;" value="הגרל שאלה" />
     <input type="button" id="btnGetAnswer" onclick="getAnswer()" style="color:green;font-size:30px;visibility:hidden;" value="הצג פיתרון" />
 
-    <select name="" id="subject" onchange="selectsubject()">
+    <select name="subjectSelectDDL" id="subject" onchange="selectsubject()">
         <option value="-1">please select a subject</option>
-        <option value="Computational_models">Computational_models</option>
-        <option value="Statistics">Statistics</option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
+        <option value="Computational_models">Computational models</option>
+        <option value="Algoritms">Algoritms</option>
     </select>
     <div id="ph3" style="color:rosybrown;font-size:20px;">
 
