--- a/ExamPrep.html
+++ b/ExamPrep.html
@@ -6,11 +6,11 @@
     <title>Questions Randomizer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="/JS_util/Worker.js"></script>
+    <script type="text/javascript" src="JS_util/Worker.js"></script>
 
     <!-- Data Sets -->
-    <script type="text/javascript" src="/JS_util/data_sets/Computetianal_Models.js"></script>
-    <script type="text/javascript" src="/JS_util/data_sets/Algoritms.js"></script>
+    <script type="text/javascript" src="JS_util/data_sets/Computetianal_Models.js"></script>
+    <script type="text/javascript" src="JS_util/data_sets/Algoritms.js"></script>
 
 
 </head>
@@ -22,7 +22,7 @@
     <select name="subjectSelectDDL" id="subject" onchange="selectsubject()">
         <option value="-1">please select a subject</option>
         <option value="Computational_models">Computational models</option>
-        <option value="Algoritms">Algoritms</option>
+        <option value="Algorithms">Algorithms</option>
     </select>
     <div id="ph3" style="color:rosybrown;font-size:20px;">
 
