--- a/ExamPrep.html
+++ b/ExamPrep.html
@@ -7,10 +7,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="JS_util/Worker.js"></script>
-
+    <script type="text/javascript" src="JS_util/data_sets/Arrays.js"></script>
     <!-- Data Sets -->
-    <script type="text/javascript" src="JS_util/data_sets/Computetianal_Models.js"></script>
+    <!-- <script type="text/javascript" src="JS_util/data_sets/Computetianal_Models.js"></script>
     <script type="text/javascript" src="JS_util/data_sets/Algorithms.js"></script>
+    <script type="text/javascript" src="JS_util/data_sets/Data_communication_networks.js"></script> -->
+
 
 
 </head>
